--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
+        pip install empy pyyaml rospkg
 #     - name: Lint with flake8
 #       run: |
 #         pip install flake8
