--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
         matrix:
           python-version: [3.6, 3.7, 3.8, 3.9]
@@ -21,7 +21,7 @@ jobs:
     - name: Setup ROS
       uses: ros-tooling/setup-ros@0.0.25
       with: 
-        required-ros-distributions: melodic
+        required-ros-distributions: noetic
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
@@ -41,6 +41,6 @@ jobs:
 #         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        source /opt/ros/melodic/setup.bash
+        source /opt/ros/noetic/setup.bash
         pip install pytest
         python -m pytest
